# investigator

githuber/: main.py  pyproject.toml
paper_reader/: README.md  main.py  pyproject.toml  temp.py  test.py
paper_reader/downloads/control_barrier_function/: 2510.01501v1.Probabilistic_Control_Barrier_Functions__Safety_in_Probability_for_Discrete_Time_Stochastic_Systems.md  2510.02127v1.Recurrent_Control_Barrier_Functions__A_Path_Towards_Nonparametric_Safety_Verification.md  2510.02127v1.Recurrent_Control_Barrier_Functions__A_Path_Towards_Nonparametric_Safety_Verification.md_summary_hf_co_unsloth_gpt_oss_20b_GGUF_latest.md  2510.02223v1.Computing_Control_Lyapunov_Barrier_Functions__Softmax_Relaxation_and_Smooth_Patching_with_Formal_Guarantees.md  2510.02720v1.A_Control_Barrier_Function_Based_Algorithm_for_Policy_Adaptation_in_Reinforcement_Learning.md  2510.02885v1.Point_Cloud_Based_Control_Barrier_Functions_for_Model_Predictive_Control_in_Safety_Critical_Navigation_of_Autonomous_Mobile_Robots.md  (+6 more)
paper_reader/prompts/: basic.md  summarize_paper.md
paper_reader/saved_for_later/: 2410.18825v2.md  2410.18825v2.md_summary_hf_co_unsloth_gpt_oss_20b_GGUF_latest.md  A_generic_approach_for_reactive_stateful_mitigation_of_application_failures_in_distributed_robotics_systems_deployed_with_Kubernetes_summary_gpt-oss:latest.md  A_generic_approach_for_reactive_stateful_mitigation_of_application_failures_in_distributed_robotics_systems_deployed_with_Kubernetes_summary_qwen3.md  FAS2022-12-Becker.md  FAS2022-12-Becker.md_summary_hf_co_unsloth_Qwen3_30B_A3B_Instruct_2507_GGUF_latest.md
(+103 files in other folders)
