[project]
name = "paper_reader"
version = "0.1.0"
description = "A CLI tool to search, download, convert, and summarize research papers from arXiv.org using Ollama models. PDFs are converted to markdown and summarized via an LLM."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.2.0",
    "docling>=2.55.0",
    # "langchain-community>=0.3.30",
    "ollama>=0.6.0",
]
